--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Radomir Bednar
 description: Web Developer from SPrague
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars1.githubusercontent.com/u/1188079?v=1&s=460
 
 #
 # Flags below are optional
