--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: https://avatars1.githubusercontent.com/u/1188079?v=1&s=460
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble: 
-  email: 
+  email: radovanmail@gmail.com
   facebook: 
   flickr: 
   github: barryclark/jekyll-now
