--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Radomir Bednar 
 
 # Short bio or description (displayed in the header)
-description: Web Developer from SPrague
+description: Web Developer from Prague
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars1.githubusercontent.com/u/1188079?v=1&s=460
